--- a/人物介绍.md
+++ b/人物介绍.md
@@ -10,6 +10,11 @@
 感情经历：
 
 1. 
+## 盖伦
+
+性别公，爱好母。
+品种：英短蓝猫
+姚博启的宠物，已做绝育手术。
 
 ## 老潘
 
@@ -18,9 +23,7 @@
 感情经历：
 
 1. 李亚男，于潘父住院事件中2人发生不合，后续分手
-2. 
-
-
+2. 艾米莉，杭州某公司猎头
 
 ## 郝公子
 
@@ -29,8 +32,6 @@
 ## 何穗
 
 姚博启的初次相亲对象，身高估计超过170。留着齐肩短发，不施粉黛。中性风十足。大专毕业后，她在县城商业街开了一家纹身店。她的职业是纹身师，她本人的左臂纹了朵盛开的牡丹。她喜欢用butterfly作为网站的注册id。她曾有一段时间非常热衷于在百度贴吧里写小说。她有一辆黑色的BMW摩托车，摩托车是她爸送给她的18岁成人礼物。最后与姚博启结为异性兄弟。
-
-
 
 ## 王旭
 
