--- a/人物介绍.md
+++ b/人物介绍.md
@@ -9,7 +9,8 @@
 
 感情经历：
 
-1. 
+1. 李虹，大学时代，已分手
+2. 华妹，至今
 ## 盖伦
 
 性别公，爱好母。
@@ -19,6 +20,12 @@
 ## 老潘
 
 本名潘伟龙，性别男，爱好女。姚博启同一届的校友兼室友，2人最开始一同租住在幸福公寓。职业：产品经理。
+
+人物经历：
+
+1. 与李亚男分手后，离开帝都来到杭州
+2. 与艾米莉分手后，选择汽修行业方向创业，成功拿到天使轮投资
+3. 与艾米莉冰释前嫌，并游说艾米莉辞职加入其公司负责公司的人力和财务
 
 感情经历：
 
@@ -54,6 +61,12 @@
 ## 黄飞
 
 幸福公寓保安。后通过培训学习了编程，加入程序员行列。
+
+## 李冀
+姚博启大学室友，目前正在申请读博。帮助其导师管理实验室。
+
+## 邓璞韵
+朗云实习生，长相不算漂亮，但很多男生追。
 
 
 
