--- a/人物介绍.md
+++ b/人物介绍.md
@@ -1,6 +1,6 @@
 ## 姚博启
 
-性别男，爱好女。1990年11月生。2013年毕业于北京邮电大学计算机专业，本小说主角，职业：程序员。
+性别男，爱好女。1990年11月生。2013年毕业于北京邮电大学计算机专业，本小说主角，职业：程序员。绰号：大姚。
 
 就业经历：
 
@@ -16,6 +16,9 @@
 性别公，爱好母。
 品种：英短蓝猫
 姚博启的宠物，已做绝育手术。
+
+## 汪清华
+性别女，姚博启高中同学兼同桌，班花。目测为本书女主角，在药店上班，现与大姚正式确定恋爱关系。
 
 ## 老潘
 
@@ -46,7 +49,7 @@
 
 ## 康神
 
-姚博启在朗云的同事，龙泉寺的志愿者，后接替李波成为架构组的组长。主导开发了"潜龙"项目。（一款个性化阅读App，内部研发代号“潜龙”）
+姚博启在朗云的领导，已婚。龙泉寺的志愿者，后接替李波成为架构组的组长。主导开发了"潜龙"项目。（一款个性化阅读App，内部研发代号“潜龙”）
 
 ## 李向阳
 
@@ -66,7 +69,7 @@
 姚博启大学室友，目前正在申请读博。帮助其导师管理实验室。
 
 ## 邓璞韵
-朗云实习生，长相不算漂亮，但很多男生追。
+姚博启所在组的朗云实习生，长相不算漂亮，但很多男生追。
 
 
 
