--- a/64国破（武侠风格）.md
+++ b/64国破（武侠风格）.md
@@ -47,7 +47,7 @@
 
 大姚仔细打量，好一个容颜倾国的女子，竟出现在这夜半荒野中，着实让人不可思议。
 
-秀眉微蹙，脸颊似雪，一双美目灼灼盯着自己，睫毛微微颤动，凝脂一般脸颊上却还挂着刚刚掉下的晶莹泪珠，在月光的衬托下，仿佛惊为天人一般。
+秀眉微蹙，脸颊似雪，一双美目灼灼盯着自己，睫毛微微颤动，凝脂一般脸颊上却还挂着刚刚掉下的晶莹泪珠，在月光的衬托下，仿佛惊为天人。
 
 
 
